--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
@@ -12,7 +21,6 @@
     "dev:server": "ts-node-dev src/server.ts",
     "build": "npx typescript",
     "start": "node lib/server.js"
-
   },
   "dependencies": {
     "dotenv": "^10.0.0",
