--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/bull": "^3.15.5",
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
@@ -19,11 +21,15 @@
   },
   "scripts": {
     "dev:server": "ts-node-dev src/server.ts",
+    "dev:queue": "ts-node-dev src/queue.ts",
     "build": "npx typescript",
     "start": "node lib/server.js"
   },
   "dependencies": {
+    "@bull-board/express": "^3.6.0",
+    "bull": "^3.29.3",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.7.0"
   }
 }
