--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bull": "^3.15.5",
+    "@types/bull-board": "^0.6.0",
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -26,8 +27,8 @@
     "start": "node lib/server.js"
   },
   "dependencies": {
-    "@bull-board/express": "^3.6.0",
     "bull": "^3.29.3",
+    "bull-board": "^0.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemailer": "^6.7.0"
